Examples/apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache-container
        image: httpd
        ports:
         - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: apache
  labels:
    app: apache

spec:
  selector:
    app: apache

  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: apache

spec:
  entryPoints: [websecure]

  routes:
    - kind: Rule
      match: Host(`URL_HERE`)
      services:
        - kind: Service
          name: apache
          namespace: default
          passHostHeader: true
          port: 80
