Examples/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
         - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: nginx
  labels:
    app: nginx

spec:
  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: nginx

spec:
  entryPoints: [websecure]

  routes:
    - kind: Rule
      match: Host(`URL_HERE`)
      services:
        - kind: Service
          name: nginx
          namespace: default
          passHostHeader: true
          port: 80
