Examples/nginx_efs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        volumeMounts:
          - name: persistent-storage
            mountPath: /usr/share/nginx/html
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: vhosts
status: {}
---
apiVersion: v1
kind: Service

metadata:
  name: nginx
  labels:
    app: nginx

spec:
  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: nginx

spec:
  entryPoints: [websecure]

  routes:
    - kind: Rule
      match: Host(`URL_HERE`)
      services:
        - kind: Service
          name: nginx
          namespace: default
          passHostHeader: true
          port: 80
