Examples/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami
        ports:
         - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: whoami
  labels:
    app: whoami

spec:
  selector:
    app: whoami

  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: whoami

spec:
  entryPoints: [websecure]

  routes:
    - kind: Rule
      match: Host(`whoami.*`)
      services:
        - kind: Service
          name: whoami
          namespace: default
          passHostHeader: true
          port: 80
