Examples/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress-container
        image: httpd
        ports:
         - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: wordpress
  labels:
    app: wordpress

spec:
  selector:
    app: wordpress

  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: wordpress

spec:
  entryPoints: [websecure]

  routes:
    - kind: Rule
      match: Host(`wordpress.*`)
      services:
        - kind: Service
          name: wordpress
          namespace: default
          passHostHeader: true
          port: 80
